--- a/SCSS/Theme Rewrite/custom-css/file-explorer/_file-explorer-style-flat-root.scss
+++ b/SCSS/Theme Rewrite/custom-css/file-explorer/_file-explorer-style-flat-root.scss
@@ -7,7 +7,7 @@
 
     --explorer-root-folder-background: rgb(var(--accent-color), 0.3);
     --explorer-root-background: rgb(var(--accent-color), 0.1);
-    --explorer-root-border-color: var(--accent);
+    --explorer-root-border-color: rgb(var(--accent-color));
     --explorer-root-folder-color: var(--text);
     --explorer-root-folder-open-color: var(--folder);
     --explorer-root-collapsed-background: transparent;
@@ -15,7 +15,7 @@
     --explorer-folder-open-background: var(--td);
 
     //Root folder
-    .nav-folder.mod-root > .nav-folder-children > .nav-folder {
+    & .nav-folder.mod-root > .nav-folder-children > .nav-folder {
  
         & > .nav-folder-children {
             margin: var(--explorer-root-folder-margin);
@@ -48,12 +48,13 @@
         text-transform: uppercase;
         letter-spacing: .25em;
         padding: 3px 0;
+        width: 100%;
         
         // Icon Float
         &::before {
             float: left;
             // padding-left: 1px;
-            margin-right: 0px;
+            // margin-right: 0px;
         }
     }
     & .mod-root .nav-folder-children > .nav-folder:not(.is-collapsed) > .nav-folder-children > .nav-folder:not(.is-collapsed) > .nav-folder-title:not(:hover) {
