--- a/SCSS/Theme Rewrite/plugins-core/_tag-pane.scss
+++ b/SCSS/Theme Rewrite/plugins-core/_tag-pane.scss
@@ -21,12 +21,12 @@
     // margin-left: -3px;
 
     content: "#";
-    padding-right: 7px;
+    padding-right: 4px;
     margin-left: 0;
     position: relative;
     color: var(--tag-text);
 }
-.tree-item-children > .tree-item-self { padding-left: 10px; }
+// .tree-item-children > .tree-item-self { padding-left: 10px; }
 
 
 //Hover
